0160: Work on raybox-zero update for chipIgnite

--- a/0159-2023-10-14.md
+++ b/0159-2023-10-14.md
@@ -14,6 +14,7 @@
 *   Did PR on test005, making `main` branch move from [registered FSM version](https://github.com/algofoogle/tt05-vga-spi-rom/blob/f47cea62570c8e45157e286745ad2686833de786/src/vga_spi_rom.v) (per test002A) to [136-bit combo/RAM model](https://github.com/algofoogle/tt05-vga-spi-rom/blob/b1bc1a93fee594268208493d05a36da2671216b5/src/vga_spi_rom.v) (per test005).
 *   Figured out [why spiflash sim is not working](#spiflash-issues) in cocotb (I think). Try a fix another day.
 *   Updated my MPW8 VM (on the Legion 7 laptop) to support `tt05env-bash` with newer OpenLane version.
+*   Last minute: Got very basic 1440x900 resolution (&div;4: 360x900) working via Altera PLL. I'll try to document it later. See branch [`res1440x900`].
 
 
 ## `test004-combo`
