--- a/0160-2023-10-16.md
+++ b/0160-2023-10-16.md
@@ -5,3 +5,111 @@
 | [**0159**-2023-10-14.md](./0159-2023-10-14.md) | *Next journal TBA* |
 
 # Work on raybox-zero update for chipIgnite
+
+# Goals
+
+*   Try 1920x1080 (div-6) and even 2560x1440 (div-8) resolution tt05vsr.
+
+# 1920x1080 in tt05vsr
+
+*   Specs for 1920x1080p60: https://projectf.io/posts/video-timings-vga-720p-1080p/#hd-1920x1080-60-hz
+*   See branch: res1920x1080 - with div-6 we can get to 2202 H pixels instead of 2200.
+*   How to set up SDC file for PLL?
+*   Using the values I calculated, I was *not* able to get my FHD Acer monitor to sync, neither using pos nor neg sync polarity.
+*   Another way to get the frequency we want might be to use hfreq and find something which is a closer fit to TIME instead of pixels?
+*   I also tried [1920x1080p30](https://projectf.io/posts/video-timings-vga-720p-1080p/#hd-1920x1080-30-hz) but still no go.
+*   ABANDONING FOR NOW.
+
+# Spec for Ellen Wood design
+
+## Base spec
+
+*   Use raybox-zero design
+*   Make a separate branch, or lots of feature branches for individual updates?
+*   Keep 25MHz clock.
+*   Keep 640x480.
+*   Option for DEPTH shading using extra RGB bits.
+*   Figure out QPI.
+*   Pins:
+    *   External digital:
+        1.  CLK??
+        2.  HSYNC
+        3.  VSYNC
+        4.  SPI memory /CS
+        5.  SPI memory SCLK
+        6.  SPI memory io0 (MOSI)
+        7.  SPI memory io1 (MISO)
+        8.  SPI memory io2
+        9.  SPI memory io3
+        10. Debug? Muxable
+    *   External analog:
+        1.  Red DAC
+        2.  Green DAC
+        3.  Blue DAC
+    *   (Total external pins: 13)
+    *   LA digital:
+        1.  RESET -- Use same as Ellen/Pawel?
+        2.  SPI slave /CS
+        3.  SPI slave SCLK
+        4.  SPI slave MOSI
+        5.  MODE0
+        6.  MODE1
+        7.  MODE2
+        8.  DEMO0
+        9.  DEMO1
+        10. SPI GENERAL slave /CS
+        11. SPI GENERAL slave SCLK
+        12. SPI GENERAL slave MOSI
+        13. Debug0
+        14. Debug1
+        15. Debug2
+        16. Debug3
+    *   Other possible IOs:
+        *   Interrupts: Could just be configurable/selectable to happen on 'Debug' pin.
+*   Memory for wall texture: DFFRAM or OpenRAM for internal memory, or just registers?
+*   Don't bother with anything 'fancy' for now:
+    *   No 'custom standard cells'
+    *   No special layouts
+    *   No extra transistors or analog magic -- just DAC.
+*   Digital ports:
+    ```verilog
+
+    input   wire            clk,        // External or internal/shared?
+    input   wire            reset,      // LA[0]?
+
+    // RAW VGA outputs:
+    output  wire            hsync_n,    // IO1
+    output  wire            vsync_n,    // IO2
+    output  wire    [23:0]  rgb,        // INTERNAL: rgb is BGR888, which go to DACs.
+    // Only upper 2 bits of each channel used normally, but full range (if supported) can do depth shading.
+
+    // SPI master for external texture memory:
+    output  wire            tex_csb,    // IO3
+    output  wire            tex_sclk,   // IO4
+    inout   wire            tex_io0,    // IO5 (MOSI)
+    inout   wire            tex_io1,    // IO6 (MISO)
+    inout   wire            tex_io2,    // IO7
+    inout   wire            tex_io3,    // IO8
+
+    //TODO: Add in the rest, mostly LA stuff:
+    // - SPI slave interfaces (vectors+params)
+    // - Mode select
+    // - Debug pins
+    // - External (multi-purpose) IO/debug pin.
+
+    ```
+
+## Stretch goals
+
+*   Combine SPI slave interfaces
+*   Map: Stored in chip (writable via SPI slave interface), or stored off-chip and read by the design.
+*   Sprites
+*   Configurable resolution, based on different input clocks up to 50MHz:
+    *   [800x600@60Hz](https://tinyvga.com/vga-timing/800x600@60Hz) needs 40.0MHz.
+    *   [1024x768@43Hz (interlaced)](https://tinyvga.com/vga-timing/1024x768@43Hz) can be done with 44.9MHz clock.
+    *   [1024x768@60Hz](https://tinyvga.com/vga-timing/1024x768@60Hz) needs 65.0 MHz, but this could work using internal DLL, and without ESD output protection we could probably do the 65MHz pixel clock output.
+
+
+## Notes
+
+*   sky130 DAC design using Xschem: https://www.youtube.com/watch?v=tqazqSHUm5I
