Update 0162: Example wall texture from reading SPI ROM

--- a/0162-2023-10-20.md
+++ b/0162-2023-10-20.md
@@ -7,3 +7,42 @@
 # raybox-zero textures from external ROM
 
 Yesterday was a day off, day prior was finishing my presentation of raybox-zero to the Z2A weekly meeting.
+
+# raybox-zero doing basic SPI
+
+It works:
+
+*   Wire up a chip to the [correct DE0-Nano GPIOs](https://github.com/algofoogle/raybox-zero/blob/c5cc453a553b7dd25b4c12cea8c0cc233605a211/de0nano/raybox-zero_de0nano.v#L217-L222)
+*   `cd raybox-zero && git checkout ew` -- commit [c5cc453](https://github.com/algofoogle/raybox-zero/commit/c5cc453a553b7dd25b4c12cea8c0cc233605a211) is where it started working.
+*   Open the Quartus project.
+*   Build, and program to FPGA.
+*   Reset the FPGA, and voila!
+
+![raybox-zero basic 'texture' loading with SPI](./i/0162-green-spi.jpg)
+
+Here are slices of familiar data from the start of the ROM:
+
+![Wall texture showing SPI data from address 000000h](./i/0162-spi-data-on-wall.jpg)
+
+Data from the ROM itself:
+
+```
+> hexdump -C test_rom.bin | head -10
+00000000  e9 03 02 20 20 04 10 40  00 00 10 40 40 07 00 00  |...  ..@...@@...|
+00000010  00 00 00 00 00 00 00 00  00 00 00 00 00 00 00 00  |................|
+*
+00000040  20 83 fe 3f 1c 4b 00 40  cc 24 00 40 1c 04 12 c1  | ..?.K.@.$.@....|
+00000050  e0 3d 01 09 41 01 fb ff  c0 00 00 02 01 00 22 a0  |.=..A.........".|
+00000060  e9 27 90 04 0c 02 c6 06  00 22 a0 ea 27 90 0a 32  |.'......."..'..2|
+00000070  01 01 28 31 66 43 02 86  02 00 21 f1 ff 01 f2 ff  |..(1fC....!.....|
+00000080  c0 00 00 7c f2 08 41 12  c1 20 0d f0 30 83 fe 3f  |...|..A.. ..0..?|
+00000090  08 fc 10 40 12 c1 f0 c9  11 09 01 cd 02 21 fb ff  |...@.........!..|
+000000a0  3d 0c 01 e9 ff c0 00 00  2d 0c 05 fa ff 26 02 1a  |=.......-....&..|
+```
+
+
+# Goals for today
+
+
+
+*   Solder up 
