--- a/0162-2023-10-20.md
+++ b/0162-2023-10-20.md
@@ -8,6 +8,11 @@
 
 Yesterday was a day off, day prior was finishing my presentation of raybox-zero to the Z2A weekly meeting.
 
+# Accomplishments
+
+*   [raybox-zero doing basic SPI](#raybox-zero-doing-basic-spi) -- I actually got this working a couple of days ago but didn't document it at the time.
+*   Soldered a brand new [AT25SF081B-SSHB-T](https://www.digikey.com.au/en/products/detail/renesas-electronics-operations-services-limited/AT25SF081B-SSHB-T/12180765) (8Mbit SPI/Quad SPI Flash ROM) on a breakout board so I can try writing to it with `flashrom` and then use it for image data and other tests in raybox-zero. NOTE: This chip is narrower (3.9mm plastic body width) than the one I used last time in [0149](./0149-2023-09-30.md) (5.3mm width, I think).
+
 # raybox-zero doing basic SPI
 
 It works:
@@ -40,9 +45,20 @@ Data from the ROM itself:
 000000a0  3d 0c 01 e9 ff c0 00 00  2d 0c 05 fa ff 26 02 1a  |=.......-....&..|
 ```
 
+# Writing to SPI flash ROM with `flashrom`
+
+Here's the chip on my breakout board:
+
+![AT25SF081B on breakout board](./i/0162-at25sf081b.jpg)
+
+Connected with Bus Pirate v3.5:
+
+TBD
+
 
 # Goals for today
 
-
-
-*   Solder up 
+*   Solder up another flash ROM.
+*   Write some image data to it, of different formats.
+*   ...TBC...
+*   Add a 'reg' that allows us to specify an address mapping for each wall texture: Host controller can animate/change any given wall texture that way. Could even be used to do scrolling messages.
